--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <i class="fa fa-instagram"></i>
     <i class="fa fa-linkedin"></i>
   </div>
-  <p>Made with <i class="fa fa-heart-o"></i> by Wheremagichappen</p>
+  <p>Made with <i class="fa fa-heart-o"></i> by Bhavya Luthra</p>
 </section>
 
 
